tests/should_fail/match_bool_pattern_on_string.nv
module test
// match: Bool literal pattern on String type
fn bad(s: String) -> String {
    return match s {
        true => "yes",
        _    => "no"
    }
}
